@@ -1,10 +1,10 @@
 #!/usr/bin/env perl
 
-use strict;
-use warnings;
 use File::Spec::Functions qw( catdir updir );
 use FindBin               qw( $Bin );
 use lib               catdir( $Bin, updir, 'lib' );
+use strictures::defanged; # Make strictures the same as use strict warnings
+use strictures;
 
 use App::Doh::Daemon;
 
